[package]
name = "my-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.0.29", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
libp2p = { version = "0.50.0", features = ["full"] }
log = "0.4.17"
