[package]
name = "my-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.0.29", features = ["derive"] }
cuckoofilter = "0.5.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
fnv = "1.0.7"
futures = "0.3.25"
libp2p = { version = "0.50.0", features = ["full"] }
libp2p-core = "0.38.0"
libp2p-swarm = "0.41.1"
log = "0.4.17"
once_cell = "1.16.0"
prost = "0.11.3"
rand = "0.8.5"
smallvec = "1.10.0"
thiserror = "1.0.37"
void = "1.0.2"

[build-dependencies]
prost-build = "0.11.4"
